# Sparsekit

./: CMakeLists.txt  README.md  install.py
cmake/: Config.cmake.in
pages/: ilut.md  matvec.md  unary.md
src/: ccn.f  color.f  dinfo13.f  dsepart.f  ilut.f  inout.f  iters.f  matvec.f  unary.f
tests/: CMakeLists.txt  test_sparsekit.f90
